--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -22,10 +22,25 @@ option {
   background: transparent;
 }
 
+button:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
+.TableBody {
+  position: relative;
+  display: grid;
+  grid-template-columns: 20% auto 40%;
+  width: 100%;
+  height: 100%;
+  gap: 20px;
+}
+
 .Table-setting {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   gap: 10px;
+  width: 100%;
 }
 
 .Table-action {
@@ -34,9 +49,91 @@ option {
   gap: 10px;
 }
 
-.game-log-table {
+.TableBoard {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
   position: relative;
-  width: 100%;
-  height: 500px;
   border: 1px solid #444;
+}
+
+.TableLog {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.TableFlob {
+  border: 1px solid #444;
+  height: 20%;
+  padding: 20px;
+}
+
+.PoolMoney {
+  padding: 20px;
+  border: 1px solid var(--focus);
+  width: fit-content;
+  min-width: 150px;
+}
+
+.PlayerTable {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.PlayerDetail {
+  display: grid;
+  border: 1px solid #444;
+  padding: 15px;
+  gap: 10px;
+}
+
+.PlayerAction {
+  display: grid;
+  gap: 20px;
+}
+
+.PlayerActionGroup1 {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.PlayerActionGroup2 {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.PlayerActionGroup2 > button {
+  display: flex;
+  justify-content: space-around;
+}
+
+.ActivePlayer {
+  border: 2px solid gold;
+  border-radius: 8px;
+  padding: 4px;
+}
+.PlayerDialog {
+  font-style: italic;
+  font-size: 0.9rem;
+  margin-top: 4px;
+  color: #fff;
+}
+
+.TimelineLog {
+  height: -webkit-fill-available;
+  padding: 20px;
+  border: 1px solid #444;
+}
+
+.chip-control {
+  display: flex;
+}
+
+.chip-control > button {
+  min-width: auto;
+  max-width: 50px;
 }
