--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -3,7 +3,7 @@ select,
 button {
   height: 40px;
   border: 1px solid #444;
-  width: 100px;
+  width: fit-content;
   padding: 10px;
   background: var(--ui-bg2);
   border-radius: 5px;
@@ -30,20 +30,25 @@ button:disabled {
 .TableBody {
   position: relative;
   display: grid;
-  grid-template-columns: 20% auto 40%;
+  grid-template-columns: 20% auto;
   width: 100%;
   height: 100%;
   gap: 20px;
 }
 
-.Table-setting {
+.TableSetting {
   display: flex;
-  flex-direction: column;
   gap: 10px;
   width: 100%;
 }
 
-.Table-action {
+.TimelineLog {
+  height: -webkit-fill-available;
+  padding: 20px;
+  border: 1px solid #444;
+}
+
+.TableAction {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -65,21 +70,28 @@ button:disabled {
 }
 
 .TableFlob {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
   border: 1px solid #444;
   height: 20%;
   padding: 20px;
+  height: fit-content;
 }
 
-.PoolMoney {
-  padding: 20px;
+.PlayerDetail.active {
   border: 1px solid var(--focus);
-  width: fit-content;
-  min-width: 150px;
+}
+
+.PlayerDetail.folded {
+  opacity: 0.4;
+  text-decoration: line-through;
 }
 
 .PlayerTable {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
@@ -95,15 +107,17 @@ button:disabled {
   gap: 20px;
 }
 
+.PlayerActionControl {
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .PlayerActionGroup1 {
   display: flex;
-  justify-content: center;
   gap: 20px;
 }
 
 .PlayerActionGroup2 {
   display: flex;
-  justify-content: center;
   gap: 20px;
 }
 .PlayerActionGroup2 > button {
@@ -111,29 +125,48 @@ button:disabled {
   justify-content: space-around;
 }
 
-.ActivePlayer {
-  border: 2px solid gold;
-  border-radius: 8px;
-  padding: 4px;
-}
 .PlayerDialog {
-  font-style: italic;
-  font-size: 0.9rem;
-  margin-top: 4px;
   color: #fff;
 }
 
-.TimelineLog {
-  height: -webkit-fill-available;
-  padding: 20px;
-  border: 1px solid #444;
+.ChipControl {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 .chip-control {
   display: flex;
+  align-items: center;
+  color: #fff;
 }
 
 .chip-control > button {
+  display: grid;
+  place-items: center;
+  border: 1px solid #444;
+  height: 100%;
+  padding: 5px 15px;
+  width: fit-content !important;
   min-width: auto;
-  max-width: 50px;
+}
+
+.GroupCard {
+  display: flex;
+  gap: 10px;
+}
+
+.TableFlobCard,
+.HandCard {
+  display: flex;
+  gap: 20px;
+}
+
+.Card {
+  display: grid;
+  place-items: center;
+  border: 1px solid #444;
+  width: 40px;
+  height: 55px;
+  border-radius: 3px;
 }
