--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -8,28 +8,28 @@
   padding-bottom: 20px;
 }
 
-.TableLayout :is(button, input) {
+.TableLayout :is(button) {
   border-radius: 3px;
   border: 1px solid #444;
   cursor: pointer;
   height: 40px;
   width: fit-content;
   min-width: auto;
-  padding: 0 15px;
   white-space: nowrap;
+  padding: 0 !important;
 }
 
-.TableLayout :is(button, input):hover {
+.TableLayout :is(button):hover {
   border: 1px solid var(--focus);
 }
 
-.TableLayout :is(button, input):disabled {
+.TableLayout :is(button):disabled {
   opacity: 0.5;
   cursor: not-allowed;
 }
 
 .TableLayout * {
-  font-size: clamp(10px, 1vw, 16px);
+  font-size: clamp(10px, 1vw, 14px);
 }
 
 .PlayerLineup {
@@ -95,7 +95,7 @@
   display: flex;
   flex-direction: column;
   border: 1px solid #444;
-  padding: 20px;
+  padding: var(--gap);
   place-items: center;
   gap: 5px;
 }
@@ -135,8 +135,8 @@
 }
 
 .ChipButton {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: var(--gap);
 }
 
@@ -147,20 +147,24 @@
 }
 
 .ChipBtn {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
   justify-content: center;
-  border: 1px solid #444;
-  width: fit-content;
+  width: 100%;
 }
 
-.ChipControl button {
-  border: 1px solid transparent;
+.ChipBtn button {
+  width: 100% !important;
 }
 
 @media screen and (max-width: 480px) {
   .TableLayout {
     --gap: 10px;
     justify-content: space-between;
+    min-height: 100vh;
+    max-height: 100vh;
+    overflow: hidden;
   }
 
   .CardBody {
@@ -169,7 +173,12 @@
 
   .TimelineLog {
     height: 100%;
-    max-height: 30%;
+    min-height: 40vh;
+    max-height: 40vh;
+  }
+
+  .PlayerLineup {
+    min-height: 20vh;
   }
 
   .PlayerFrame,
@@ -177,5 +186,10 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    place-content: center;
+  }
+
+  .TableLayout :is(button) {
+    height: 35px;
   }
 }
